# komodo

./: 404.html  Cargo.toml  index.html  runfile.toml  sitemap.xml
.github/workflows/: trivy.yml
assets/css/: styles.d7cba00c.css
assets/js/: 0058b4c6.5b2eb54e.js  0058b4c6.b632a5ec.js  0058b4c6.c1ee89ef.js  0058b4c6.c72b1466.js  0058b4c6.d4c83a21.js  0e384e19.27c88206.js  0e384e19.f2932478.js  0e384e19.fe078619.js  17896441.f6596e76.js  1bd19f0c.3915991b.js  1bd19f0c.6544c048.js  1bd19f0c.92ee9ea2.js  1bd19f0c.ccd64c66.js  1d94002d.29c0ccfd.js  1d94002d.83781e3b.js  1d94002d.ab1d4f6c.js  1df93b7f.5dc032ff.js  1df93b7f.7e9ef97e.js  209736a1.47e2b879.js  209736a1.d85f8544.js  2f7566f9.2025221a.js  2f7566f9.40a8c2ea.js  2f7566f9.a498b7f6.js  2f7566f9.ccfad0e3.js  (+90 more)
compose/: compose.env  ferretdb.compose.yaml  mongo.compose.yaml  postgres.compose.yaml  sqlite.compose.yaml
config/: .kmignore  core.config.toml  komodo.cli.toml  periphery.config.toml
deploy/: komodo.ts  main.ts
docs/: api.html  build-images.html  connect-servers.html  deploy-containers.html  development.html  docker-compose.html  file-paths.html  intro.html  other-resources.html  permissioning.html  procedures.html  resources.html  setup.html  sync-resources.html  variables.html  version-upgrades.html  webhooks.html
docsite/: docusaurus.config.ts  sidebars.ts
lib/config/: Cargo.toml
lib/config/src/: error.rs  lib.rs  merge.rs
lib/database/: Cargo.toml
lib/database/src/: lib.rs
lib/database/src/utils/: backup.rs  copy.rs  restore.rs
scripts/: install-cli.py  setup-periphery.py
(+106 files in other folders)
